--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,12 @@
 }
 
 body {
+  overflow-x: hidden;
+  overflow-y: hidden;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-image: url('../public/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
 }
